# receiptslens

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  railway.toml
app/: __init__.py  api.py  exceptions.py  main.py  ocr.py  preprocessing.py  security.py  ssrf_guard.py
docs/: api.md  ocr-pipeline.md  ocr.md
examples/: parse_receipt.py
infra/: Dockerfile  README.md
specs/: async_confidence_v0.2.md  batch_processing_v0.3.md  duplicate_detection_v0.4.md
tests/: _stubs_bytes_from_url.py  _stubs_image_url.py  _stubs_image_url_endpoint.py  test_api.py  test_async_confidence.py  test_async_nonblocking_fetch.py  test_batch_processing.py  test_configurable_limits.py  test_fetch_image_bytes.py  test_fetcher_wiring.py  test_image_url_endpoint.py  test_magic_bytes.py  test_ocr.py  test_ocr_coverage.py  test_ocr_exceptions.py  test_preprocessing.py  test_receipt_parsing.py  test_security.py  test_security_egress_allowlist.py  test_security_integration.py  test_ssrf_guard.py
tests/_disabled/: test_duplicate_detection.py
